# analytics-ingest

./: README.md  flake.nix  pyproject.toml
.github/workflows/: run-tests.yml
analytics_ingest/: __main__.py
