[tool.poetry]
name = "analytics-ingest"
version = "0.1.0"
description = "Dolphin's Analytics data ingestion server"
authors = ["Pierre Bourdon <delroth@dolphin-emu.org>"]
license = "MIT"

[tool.poetry.scripts]
analytics-ingest = "analytics_ingest.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
bottle = "^0.12.23"
clickhouse-driver = "^0.2.4"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
