[project]
name = "analytics-ingest"
version = "0.1.0"
description = "Dolphin's Analytics data ingestion server"
authors = [{ name = "Pierre Bourdon", email = "delroth@dolphin-emu.org" }]
requires-python = ">=3.9,<3.10"
license = "MIT"
dependencies = [
    "bottle>=0.12.23,<0.13",
    "clickhouse-driver>=0.2.4,<0.3",
    "prometheus-client>=0.15.0,<0.16",
    "gunicorn>=20.1.0,<21",
]

[project.scripts]
analytics-ingest = "analytics_ingest.__main__:main"

[dependency-groups]
dev = [
    "black>=22.6.0,<23",
    "pytest>=7.1.3,<8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["analytics_ingest"]
